# speculators

./: .coderabbit.yaml  .gitignore  .lycheeignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  DFLASH_COMPATIBILITY_OUTPUT.txt  DFLASH_COMPATIBILITY_REPORT.md  README.md  Speculators_0.3.0_release-notes.md  THIRD_PARTY_NOTICES  convert.py  convert_peagle_config.py  data.sh  ersadminAppDataLocalProgramsTrae CNresourcesappoutvsworkbenchcontribterminalcommonscriptssafe_rm_aliases.ps1 } catch{} ; Write-Output [Trae CN] Safe Rm alias is not enabled, try to fix it now.  fix.md  guidellm.sh  mkdocs.yml  modal_speculators.py  plan.md  pyproject.toml  regenerate.py  setup.py  test.sh  tox.ini  workflow.md
.buildkite/: pipeline.yml
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  mergify.yml
claude-skills/: train-speculator.md
docs/: .nav.yml  README.md  adding_new_algorithms.md  branding.md  community.md  convert.md  index.md  roadmap.md
examples/: OFFLINE_TRAINING.md  ONLINE_TRAINING.md  README.md  prototype_example.py
hs_connectors/: pyproject.toml  setup.py
hs_connectors/src/hs_connectors/: __init__.py  mooncake_hidden_states_connector.py  mooncake_store.py  transfer.py
scripts/: DATAGEN.md  README.md  TRAINING.md  autopilot.sh  benchmark.py  benchmark_independent_consumers.py  build_vocab_mapping.py  oneshot.sh  (+24 more)
scripts/agentic_regeneration/: .gitignore  convert_traces.py  pyproject.toml
scripts/agentic_regeneration/configs/: livecodebench.toml  prolog.toml  r2e.toml
(+1075 files in other folders)
