[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project]
name = "hs-connectors"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "safetensors",
    "torch",
]

[project.optional-dependencies]
mooncake = [
    "mooncake-transfer-engine",
]
vllm = [
    "vllm",
]
